src/objects/Product_Feature__c.object
<CustomObject>
    <description>Added by DS, 709 - product data modeling to store Product feature details</description>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focal_Point__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Focal Point</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New?</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Feature</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Focal_Point__c</columns>
        <columns>Is_New__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Feature Commercial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>